<resources>
    <string name="app_name">Brandon\'s First App</string>

    <string name="first_name">Brandon</string>
    <string name="last_name">Tran</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">Hi! My name is Brandon, and I am a third year computer science and engineering major at UCLA</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Programming</string>
    <string name="profile_hobby_second_text">🥈 Reading</string>
    <string name="profile_hobby_third_text">🥉 Having fun!</string>
</resources>